# stroid

./: .gitignore  Doxyfile  meson.build  meson_options.txt  readme.md
build-check/: meson.build
build-check/CPPC/: meson.build
build-config/: meson.build
build-config/CLI11/: meson.build
build-config/libconfig/: meson.build
build-config/magic_enum/: meson.build
build-config/mfem/: meson.build
configs/: default_config.toml  test_external_domain.toml  test_flattening.toml
docs/html/: index.html  navtreeindex0.js
docs/html/search/: all_2.js  all_6.js  searchdata.js
docs/static/: mainpage.md
src/: meson.build
src/include/stroid/: meson.build  stroid.h.in
src/include/stroid/IO/: mesh.h
src/include/stroid/config/: config.h
src/include/stroid/topology/: curvilinear.h  mapping.h  topology.h
src/include/stroid/utils/: mesh_utils.h
src/lib/IO/: mesh.cpp
subprojects/: cli11.wrap  libconfig.wrap
tests/: meson.build  stroidTest.cpp
tools/: meson.build  stroid.cpp
